[package]
name = "expr-resolver"
version = "0.1.0"
edition = "2021"
authors = ["Prashant Rahul <prashantrahul141@protonmail.com>"]
description = "Solves a mathematical expression while following precedence and associativity."
readme = "README.md"
homepage = "https://github.com/prashantrahul141/expr-resolver"
repository = "https://github.com/prashantrahul141/expr-resolver"
license = "MIT"
keywords = ["expression", "parser", "lexer", "interpreter"]
categories = ["compilers", "parser-implementations"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
