[package]
name = "expr-solver"
version = "1.0.4"
edition = "2021"
authors = ["Prashant Rahul <prashantrahul141@protonmail.com>"]
description = "Solves a mathematical expression while following precedence and associativity."
readme = "README.md"
homepage = "https://github.com/prashantrahul141/expr-solver"
repository = "https://github.com/prashantrahul141/expr-solver"
license = "MIT"
keywords = ["expression", "parser", "lexer", "interpreter"]
categories = ["compilers", "parser-implementations"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.20"
